--- a/src/main/templates/main/layout.html
+++ b/src/main/templates/main/layout.html
@@ -42,7 +42,7 @@
             <li>
                 <a href="{% url 'main:indices' company.slug %}">
                     <i class="icon-th-large"></i>
-                    <span>Indices</span>
+                    <span>Indicadores SST</span>
                 </a>
             </li>
             <!--<li>
