--- a/src/main/templates/main/layout.html
+++ b/src/main/templates/main/layout.html
@@ -23,7 +23,7 @@
             <li>
                 <a href="{% url 'main:requirements_list' company.slug %}">
                     <i class="icon-tasks"></i>
-                    <span>Requisitos</span>
+                    <span>Requerimientos</span>
                 </a>
             </li>
 
