--- a/src/main/templates/main/requirements/list.html
+++ b/src/main/templates/main/requirements/list.html
@@ -4,44 +4,55 @@
 {% endblock %}
 {% block content %}
 
-<div id="pad-wrapper" class="users-list">
+    <div id="pad-wrapper" class="users-list">
     <div class="row header">
         <h3>REQUERIMIENTOS</h3>
         {% if request.user.is_superuser %}
-        <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
+            <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
                 <a href="{% url 'main:requirement_new' company.slug %}" class="btn-flat success pull-right">
                     <span>&#43;</span>
                     Nuevo Requerimiento
                 </a>
             </div>
-    {% endif %}
+        {% endif %}
     </div>
     <div id="pad-wrapper" class="users-list">
 
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <th>Requerimiento</th>
-        </tr>
-        </thead>
-        <tbody>
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th>Requerimiento</th>
+                <th>Descripcion</th>
+                <th>Opciones</th>
+            </tr>
+            </thead>
+            <tbody>
 
-        {% for requirement in requirements %}
-        <tr>
-            <td><a href="{% url 'main:format_list' company.slug requirement.pk %}"><b>{{requirement.name}}</b></a></td>
-        </tr>
-        {% endfor %}
+            {% for requirement in requirements %}
+                <tr>
+                    <td><a href="{% url 'main:format_list' company.slug requirement.pk %}"><b>{{ requirement.name }}</b></a>
+                    </td>
+                    <td>{{ requirement.description }}</td>
+                    {% if request.user.is_superuser %}
+                        <td class="text-left">
+                            <ul>
+                                <li><a href="{% url 'main:requirement_edit' company.slug requirement.pk %}">Edit</a></li>
+                            </ul>
+                        </td>
+                    {% endif %}
+                </tr>
+            {% endfor %}
 
-        </tbody>
+            </tbody>
 
-    </table>
+        </table>
 
-</div>
+    </div>
 
 {% endblock %}
 
 {% block more_scripts %}
-<script>
+    <script>
 
-</script>
-{% endblock%}
+    </script>
+{% endblock %}
