--- a/src/main/templates/main/layout.html
+++ b/src/main/templates/main/layout.html
@@ -34,7 +34,7 @@
                 </a>
             </li>
             <li>
-                <a href="{% url 'fullcalendar:list' company.slug %}">
+                <a href="{% url 'fullcalendar:calendar_list' company.slug %}">
                     <i class="icon-calendar-empty"></i>
                     <span>Calendarios</span>
                 </a>
