--- a/src/main/templates/main/requirements/list.html
+++ b/src/main/templates/main/requirements/list.html
@@ -36,7 +36,7 @@
                     {% if request.user.is_superuser %}
                         <td class="text-left">
                             <ul>
-                                <li><a href="{% url 'main:requirement_edit' company.slug requirement.pk %}">Edit</a></li>
+                                <li><a href="{% url 'main:requirement_edit' company.slug requirement.pk %}">Editar</a></li>
                             </ul>
                         </td>
                     {% endif %}
