--- a/src/main/templates/main/hooks/_form.html
+++ b/src/main/templates/main/hooks/_form.html
@@ -2,7 +2,7 @@
     {% csrf_token %}
     {% for f in form %}
         <div class="form-group {% if f.errors %}has-error{% endif %}">
-            <label for="id_{{ f.name }}" class="col-sm-2 control-label">{{ f.label|capfirst }}</label>
+            <label for="id_{{ f.name }}" class="col-sm-2 control-label">{{ f.label|capfirst }}:</label>
             <div class="col-sm-10">
                 {{ f }}
                 {% for error in f.errors %}
@@ -13,6 +13,6 @@
     {% endfor %}
 
     <div class="pull-right">
-        <input type="submit" class="btn btn-primary pull-right" value="{{  save_text|default:'save' }}" name="_save">
+        <input type="submit" class="btn btn-primary pull-right" value="{{  save_text|default:'Guardar' }}" name="_save">
     </div>
 </form>
