--- a/src/main/templates/main/layout_with_out_nav.html
+++ b/src/main/templates/main/layout_with_out_nav.html
@@ -79,7 +79,7 @@
         {% if request.user.is_superuser %}
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle hidden-xs hidden-sm" data-toggle="dropdown">
-                    {% trans 'system configuration' %}
+                    Configuracion Global
                     <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
