--- a/src/main/templates/main/accidents/list.html
+++ b/src/main/templates/main/accidents/list.html
@@ -42,9 +42,9 @@
                 <td>{{accident.get_type_accident_display}}</td>
                 {% if request.user.is_superuser %}
                 <td>
-                    <ul class="actions">
-                        <li><a href="{% url 'main:accident_edit' company.slug accident.pk %}">Edit</a></li>
-                        <li class="last"><a href="{% url 'main:accident_delete' company.slug accident.pk %}">Delete</a></li>
+                    <ul >
+                        <li><a href="{% url 'main:accident_edit' company.slug accident.pk %}">Editar</a></li>
+                        <li class="last"><a href="{% url 'main:accident_delete' company.slug accident.pk %}">Eliminar</a></li>
                     </ul>
                 </td>
             {% endif %}
