--- a/src/main/templates/main/layout.html
+++ b/src/main/templates/main/layout.html
@@ -36,15 +36,15 @@
             <li>
                 <a href="{% url 'fullcalendar:calendar_list' company.slug %}">
                     <i class="icon-calendar-empty"></i>
-                    <span>Calendarios</span>
+                    <span>Cronogramas Mensuales</span>
                 </a>
             </li>
-            <li>
+            <!--<li>
                 <a href="{% url 'main:indices' company.slug %}">
                     <i class="icon-th-large"></i>
                     <span>Indicadores SST</span>
                 </a>
-            </li>
+            </li>-->
             <!--<li>
                 <a href="{% url 'main:requirements_list' company.slug %}">
                     <i class="icon-plus"></i>
