--- a/src/main/templates/main/layout_with_out_nav.html
+++ b/src/main/templates/main/layout_with_out_nav.html
@@ -61,7 +61,7 @@
             <span class="icon-bar"></span>
         </button>
         {% if company.logo %}
-             <img src="{{ company.logo.url }}" alt="contact" class="avatar" style="max-width: 50px; margin-left: 50px;"/>
+             <img src="{{ company.logo.url }}" alt="contact" class="avatar" style="max-height: 100px;"/>
         {% else %}
             <h3 style="color: white; margin-left: 50px;margin-top: 5px;">JRA</h3>
         {% endif %}
