--- a/src/accounts/templates/accounts/login.html
+++ b/src/accounts/templates/accounts/login.html
@@ -70,7 +70,7 @@
 <div class="login-wrapper" >
 
         <a href="index.html">
-            <img class="logo" src="{% static 'main/img/logo.png' %}" alt="logo" />
+            <img class="logo" src="{% static 'main/img/logo_proteccion.png' %}" alt="logo" />
         </a>
 
         <div class="box">
