--- a/src/main/templates/main/company/form.html
+++ b/src/main/templates/main/company/form.html
@@ -29,7 +29,7 @@
                         </div>
                     {% endfor %}
                     <hr>
-                    <h3>{% trans 'company user'|capfirst %}</h3>
+                    <h3>Usuario Compañía</h3>
                     <br>
                     {% for f in employee_form %}
                         <div class="form-group {% if f.errors %}has-error{% endif %}">
