--- a/src/main/templates/main/layout_with_out_nav.html
+++ b/src/main/templates/main/layout_with_out_nav.html
@@ -13,38 +13,40 @@
 
     <link href="{% static 'main/css/bootstrap/bootstrap.css' %}" type="text/css" rel="stylesheet"/>
     <link href="{% static 'main/css/bootstrap/bootstrap-overrides.css' %}" type="text/css" rel="stylesheet"/>
-     <link href="{% static 'main/css/lib/bootstrap.datepicker.css'%}" type="text/css" rel="stylesheet" />
-    <!-- libraries -->
-    <link href="{% static 'main/css/lib/font-awesome.css' %}" type="text/css" rel="stylesheet"/>
-    <link href="{% static 'main/css/lib/select2.css'%}" type="text/css" rel="stylesheet" />
-    <link href="{% static 'main/css/lib/uniform.default.css' %}" type="text/css" rel="stylesheet" />
-
 
     <!-- global styles -->
     <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/layout.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/elements.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/icons.css' %}"/>
-    <link rel="stylesheet" href="{% static 'main/css/compiled/form-showcase.css' %}" type="text/css" media="screen" />
+
+    <!-- libraries -->
+    <link href="{% static 'main/css/lib/font-awesome.css' %}" type="text/css" rel="stylesheet"/>
+    {% if not worker_view %}
+        <link href="{% static 'main/css/lib/bootstrap.datepicker.css' %}" type="text/css" rel="stylesheet"/>
+
+        <link href="{% static 'main/css/lib/select2.css' %}" type="text/css" rel="stylesheet"/>
+        <link href="{% static 'main/css/lib/uniform.default.css' %}" type="text/css" rel="stylesheet"/>
 
 
-    <!-- this page specific styles -->
-{#    <link rel="stylesheet" href="{% static 'main/css/compiled/index.css' %}" type="text/css" media="screen"/>#}
 
-    <!-- open sans font -->
+        <link rel="stylesheet" href="{% static 'main/css/compiled/form-showcase.css' %}" type="text/css"
+              media="screen"/>
+
+
+        <!-- this page specific styles -->
+        {#    <link rel="stylesheet" href="{% static 'main/css/compiled/index.css' %}" type="text/css" media="screen"/>#}
+
+        <!-- open sans font -->
+        <!-- libraries -->
+        <link href="{% static 'main/css/lib/jquery-ui-1.10.2.custom.css' %}" rel="stylesheet" type="text/css"/>
+    {% endif %}
+    {% block styles %}
+    {% endblock %}
+
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
           rel='stylesheet' type='text/css'/>
 
-    <!-- lato font -->
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic'
-          rel='stylesheet' type='text/css'/>
 
-
-    <!-- libraries -->
-    <link href="{% static 'main/css/lib/jquery-ui-1.10.2.custom.css' %}" rel="stylesheet" type="text/css"/>
-
-
-    {% block styles %}
-    {% endblock %}
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -61,7 +63,7 @@
             <span class="icon-bar"></span>
         </button>
         {% if company.logo %}
-             <img src="{{ company.logo.url }}" alt="contact" class="avatar" style="max-height: 100px;"/>
+            <img src="{{ company.logo.url }}" alt="contact" class="avatar" style="max-height: 100px;"/>
         {% else %}
             <h3 style="color: white; margin-left: 50px;margin-top: 5px;">JRA</h3>
         {% endif %}
@@ -117,37 +119,35 @@
 </div>
 
 
-
-
 <!-- call this page plugins -->
 
 <!-- knob -->
-{% if not calendar %}
-<script src="http://code.jquery.com/jquery-latest.js"></script>
-<script src="{% static 'main/js/bootstrap.min.js' %}"></script>
-<script src="{% static 'main/js/jquery-ui-1.10.2.custom.min.js' %}"></script>
-<script src="{% static 'main/js/wysihtml5-0.3.0.js' %}"></script>
-<script src="{% static 'main/js/bootstrap.datepicker.js' %}"></script>
-<script src="{% static 'main/js/jquery.uniform.min.js' %}"></script>
-<script src="{% static 'main/js/select2.min.js'%}"></script>
-<script src="{% static 'main/js/theme.js' %}"></script>
+{% if not calendar and not worker_view %}
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="{% static 'main/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'main/js/jquery-ui-1.10.2.custom.min.js' %}"></script>
+    <script src="{% static 'main/js/wysihtml5-0.3.0.js' %}"></script>
+    <script src="{% static 'main/js/bootstrap.datepicker.js' %}"></script>
+    <script src="{% static 'main/js/jquery.uniform.min.js' %}"></script>
+    <script src="{% static 'main/js/select2.min.js' %}"></script>
+    <script src="{% static 'main/js/theme.js' %}"></script>
     <script type="text/javascript">
-    $(function () {
+        $(function () {
 
-        // add uniform plugin styles to html elements
-        $("input:checkbox, input:radio").uniform();
+            // add uniform plugin styles to html elements
+            $("input:checkbox, input:radio").uniform();
 
-        // select2 plugin for select elements
-        $(".select2").select2({
-            placeholder: "Select a State"
+            // select2 plugin for select elements
+            $(".select2").select2({
+                placeholder: "Select a State"
+            });
+
+            // datepicker plugin
+            $('.input-datepicker').datepicker().on('changeDate', function (ev) {
+                $(this).datepicker('hide');
+            });
         });
-
-        // datepicker plugin
-        $('.input-datepicker').datepicker().on('changeDate', function (ev) {
-            $(this).datepicker('hide');
-        });
-    });
-</script>
+    </script>
 {% endif %}
 {% block scripts %}
 
