--- a/src/fullcalendar/templates/fullcalendar/calendar.html
+++ b/src/fullcalendar/templates/fullcalendar/calendar.html
@@ -33,7 +33,7 @@
 {% block content %}
 <div id="pad-wrapper" class="new-user">
     <div class="col-md-12 text-center">
-        <h3>calendario <b>{{calendar.title}}</b></h3>
+        <h3>Cronograma <b>{{calendar.title}}</b></h3>
     </div>
     <div id='calendar'></div>
 </div>
