--- a/src/main/templates/main/layout.html
+++ b/src/main/templates/main/layout.html
@@ -36,7 +36,7 @@
             <li>
                 <a href="{% url 'fullcalendar:calendar_list' company.slug %}">
                     <i class="icon-calendar-empty"></i>
-                    <span>Cronogramas Mensuales</span>
+                    <span>Programas Anuales</span>
                 </a>
             </li>
             <!--<li>
@@ -70,7 +70,7 @@
             <li>
                 <a href="{% url 'acuerdos_sst:agreement_list' company.slug %}">
                     <i class="icon-comments-alt"></i>
-                    <span>Acuerdo SST</span>
+                    <span>Comite SST</span>
                 </a>
             </li>
             <li>
