--- a/src/main/templates/main/layout_with_out_nav.html
+++ b/src/main/templates/main/layout_with_out_nav.html
@@ -122,7 +122,7 @@
 <!-- call this page plugins -->
 
 <!-- knob -->
-{% if not calendar and not worker_view %}
+{% if not calendar and not worker_view and not accident_view %}
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="{% static 'main/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'main/js/jquery-ui-1.10.2.custom.min.js' %}"></script>
