--- a/src/acuerdos_sst/templates/acuerdos_sst/agreement.html
+++ b/src/acuerdos_sst/templates/acuerdos_sst/agreement.html
@@ -6,7 +6,7 @@
     <div id="pad-wrapper" class="new-user">
         <div class="row header">
             <div class="col-md-12">
-                <h3>ACUERDOS</h3>
+                <h3>ACUERDOS DE COMITE</h3>
             </div>
         </div>
      {% if message %}
@@ -14,20 +14,17 @@
                 <strong>Error!</strong> {{ message }} {{ response }}
             </div>
         {% endif %}
-     <div class="row form-wrapper">
+     <div class="row">
         <!-- left column -->
-        <div class="col-md-9 with-sidebar">
+        <div class="col-md-12">
             <form action="." method="post" class="form-horizontal" enctype="multipart/form-data">
             {% csrf_token %}
             {% for field in form %}
             {% include 'main/hooks/field_with_label.html' with field=field %}
             {% endfor %}
-
-            <div class="form-group">
-                            <div class="col-md-offset-2 col-md-8">
-                              <button type="submit" class="btn btn-glow">Save</button>
-                            </div>
-                        </div>
+             <div class="pull-right">
+                <input type="submit" class="btn btn-primary pull-right" value="{{  save_text|default:'Guardar' }}" name="_save">
+            </div>
 
         </form>
         </div>
