--- a/src/fullcalendar/templates/fullcalendar/list.html
+++ b/src/fullcalendar/templates/fullcalendar/list.html
@@ -8,12 +8,12 @@
     <div id="pad-wrapper" class="users-list">
         <div class="table-wrapper products-table">
             <div class="row header">
-                <h3>Calendarios</h3>
+                <h3>Cronograma</h3>
                 {% if request.user.is_superuser %}
                     <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
                         <a href="{% url 'fullcalendar:new' company.slug %}" class="btn-flat success pull-right">
                             <span>&#43;</span>
-                            Nuevo Calendario
+                            Nuevo Cronograma
                         </a>
                     </div>
                 {% endif %}
