--- a/src/main/templates/main/accidents/accidents.html
+++ b/src/main/templates/main/accidents/accidents.html
@@ -6,7 +6,7 @@
     <div id="pad-wrapper" class="new-user">
         <div class="row header">
             <div class="col-md-12">
-                <h3>ACCIDENTES, INCIDENTES Y SALUD OCUPACIONAL</h3>
+                <h3>ACCIDENTES, INCIDENTES, ENFERMEDAD OCUPACIONAL Y ACTO INSEGURO</h3>
             </div>
         </div>
      {% if message %}
@@ -23,11 +23,9 @@
             {% include 'main/hooks/field_with_label.html' with field=field %}
             {% endfor %}
 
-            <div class="form-group">
-                            <div class="col-md-offset-2 col-md-8">
-                              <button type="submit" class="btn btn-glow">Save</button>
-                            </div>
-                        </div>
+             <div class="pull-right">
+                <input type="submit" class="btn btn-primary pull-right" value="{{  save_text|default:'Guardar' }}" name="_save">
+            </div>
 
         </form>
         </div>
