--- a/src/main/templates/main/accidents/list.html
+++ b/src/main/templates/main/accidents/list.html
@@ -2,12 +2,17 @@
 {% load static %}
 {% block styles %}
     <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/tables.css'%}"/>
+    <link href="{% static 'main/css/lib/jquery.dataTables.css' %}" type="text/css" rel="stylesheet" />
+
+    <!-- this page specific styles -->
+    <link rel="stylesheet" href=" {% static 'main/css/compiled/datatables.css' %}" type="text/css" media="screen" />
+
 {% endblock %}
 {% block content %}
     <div id="pad-wrapper" class="users-list">
     <div class="table-wrapper products-table">
         <div class="row header">
-            <h3>ACCIDENTES, INCIDENTES Y SALUD OCUPACIONAL</h3>
+            <h3>ACCIDENTES, INCIDENTES, ENFERMEDAD OCUPACIONAL Y ACTO INSEGURO</h3>
             {% if request.user.is_superuser %}
             <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
                 <a href="{% url 'main:accident_new' company.slug %}" class="btn-flat success pull-right">
@@ -22,7 +27,7 @@
                 <strong>Error!</strong> {{ message }} {{ response }}
             </div>
         {% endif %}
-        <table class="table table-hover">
+        <table  id="example">
             <thead>
             <tr>
                 <th>Título</th>
@@ -42,7 +47,7 @@
                 <td>{{accident.get_type_accident_display}}</td>
                 {% if request.user.is_superuser %}
                 <td>
-                    <ul >
+                    <ul class="actions">
                         <li><a href="{% url 'main:accident_edit' company.slug accident.pk %}">Editar</a></li>
                         <li class="last"><a href="{% url 'main:accident_delete' company.slug accident.pk %}">Eliminar</a></li>
                     </ul>
@@ -57,4 +62,16 @@
 {% endblock%}
 
 {% block scripts %}
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="{% static 'main/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'main/js/jquery.dataTables.js' %}"></script>
+    <script src="{% static 'main/js/theme.js'%}"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('#example').dataTable({
+                "sPaginationType": "full_numbers"
+            });
+        });
+    </script>
 {% endblock%}
