--- a/src/accounts/templates/accounts/login.html
+++ b/src/accounts/templates/accounts/login.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load static %}
 <!DOCTYPE html>
-<html  style=" background-image: url({% static "main/img/bgs/9.jpg" %});">
+<html  style=" background-image: url({% static "main/img/bgs/back-green.jpg" %});">
 <head>
 
     <title>Protección Ambiental</title>
