--- a/src/main/templates/main/layout_with_out_nav.html
+++ b/src/main/templates/main/layout_with_out_nav.html
@@ -65,7 +65,7 @@
         {% if company.logo %}
             <img src="{{ company.logo.url }}" alt="contact" class="avatar" style="max-height: 100px;"/>
         {% else %}
-            <h3 style="color: white; margin-left: 50px;margin-top: 5px;">JRA</h3>
+            <img src="{% static 'main/img/logo_proteccion.png' %}" alt="contact" class="avatar" style="max-height: 100px;"/>
         {% endif %}
 
     </div>
