--- a/src/fullcalendar/templates/fullcalendar/calendar.html
+++ b/src/fullcalendar/templates/fullcalendar/calendar.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" type="text/css"
       href="{% static 'fullcalendar/plugins/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css' %}"/>
 <link href="{% static 'fullcalendar/fullcalendar/fullcalendar.css'%}" rel="stylesheet"/>
-<link href="https://fullcalendar.io/js/fullcalendar-3.1.0/fullcalendar.print.min.css" rel="stylesheet" media='print'/>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.1.0/fullcalendar.print.css" rel="stylesheet" media='print'/>
 <link href="{% static 'fullcalendar/fullcalendar/lib/cupertino/jquery-ui.min.css' %}" rel="stylesheet"/>
     <link rel="stylesheet" href="{% static 'main/css/compiled/calendar.css' %}" type="text/css" media="screen" />
 
@@ -85,12 +85,14 @@
     <script src="http://code.jquery.com/jquery-latest.js"></script>
      <script src="{% static 'main/js/jquery-ui-1.10.2.custom.min.js' %}"></script>
       <script src="{% static 'main/js/bootstrap.min.js' %}"></script>
-<script src="https://fullcalendar.io/js/fullcalendar-3.1.0/lib/moment.min.js"></script>
+<!-- <script src="https://fullcalendar.io/js/fullcalendar-3.1.0/lib/moment.min.js"></script> -->
+<script src="{% static 'fullcalendar/plugins/v2/moment.min.js' %}"></script>
+
      <script src="{% static 'main/js/theme.js' %}"></script>
 <script type="text/javascript" src="{% static 'fullcalendar/plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js' %}"></script>
 <!--<script src="{% static 'main/js/fullcalendar.min.js' %}"></script>-->
-<script src="https://fullcalendar.io/js/fullcalendar-3.1.0/fullcalendar.min.js"></script>
-<script src="https://fullcalendar.io/js/fullcalendar-3.1.0/locale/es.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.1.0/fullcalendar.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.1.0/locale/es.js"></script>
 <script>
         $(document).ready(function () {
             var format = 'DD/MM/YYYY hh:mm a';
