--- a/src/main/templates/main/reports/reports_mensual.html
+++ b/src/main/templates/main/reports/reports_mensual.html
@@ -25,7 +25,7 @@
             <h3>Mes {{ month.mes }}</h3>
             <h4 class="">Compañia: {{ company.name }}</h4>
             <a class="btn-flat icon pull-right" id="restore_btn" href="{% url 'main:refresh_inform' company_slug month.index %}">
-                <i class="icon-refresh"></i> Refrescar
+                <i class="icon-refresh"></i> Actualizar informe
             </a>
 
         </div>
